--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ python-dotenv = "^1.0.1"
 loguru = "^0.7.2"
 tqdm = "^4.66.4"
 cohere = "^5.5.8"
+setuptools = "^70.3.0"
+mlx-lm = "^0.15.2"
 
 
 [build-system]
