update example api and gui

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ COHERE_API_KEY=E6T1O6CzrNURvXAYuAq8Ikd52litpmmlP9XLsdqD;FcPRl6TpJuPYWafreAayEDB8
 DATA_ARTICLE_DIR=data/article
 DATA_QNA_DIR=data/qna
 DATA_SRC_URL_PREFIX=https://thuvienphapluat.vn/hoi-dap-phap-luat/tien-te-ngan-hang
+
+LAWYER_API_URL=http://localhost:8000
