--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,16 @@ loguru = "^0.7.2"
 tqdm = "^4.66.4"
 cohere = "^5.5.8"
 setuptools = "^70.3.0"
-mlx-lm = "^0.15.2"
+transformers = "^4.42.4"
+mlx = "^0.16.0"
+sentencepiece = "^0.2.0"
+protobuf = "^5.27.2"
+pyyaml = "^6.0.1"
+jinja2 = "^3.1.4"
+fastapi = "^0.111.1"
+uvicorn = "^0.30.1"
+sentence-transformers = "^3.0.1"
+mlx-lm = "^0.15.3"
 
 
 [build-system]
