--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 description = ""
 authors = ["tcstrength <thai.cuong1404@gmail.com>"]
 readme = "README.md"
+packages = [
+    {include = "src/api"},
+    {include = "src/data"},
+    {include = "src/gui"},
+    {include = "src/util"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -26,6 +32,7 @@ fastapi = "^0.111.1"
 uvicorn = "^0.30.1"
 sentence-transformers = "^3.0.1"
 mlx-lm = "^0.15.3"
+pyvi = "^0.1.1"
 
 
 [build-system]
