--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+HUGGINGFACE_TOKEN=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
 HF_TOKEN=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
 HF_TOKEN_WRITE=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
 COHERE_API_KEY=E6T1O6CzrNURvXAYuAq8Ikd52litpmmlP9XLsdqD;FcPRl6TpJuPYWafreAayEDB8QCVTdnsr8ISmd3sA;9Vf3lZqc7ioYIjFZatx0kkZAFalUfBcJ3GqAixDG
