--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ uvicorn = "^0.30.1"
 sentence-transformers = "^3.0.1"
 mlx-lm = "^0.15.3"
 pyvi = "^0.1.1"
+bert-score = "^0.3.13"
 
 
 [build-system]
