Update vector database

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ setuptools = "^70.3.0"
 protobuf = "^5.27.2"
 pyyaml = "^6.0.1"
 jinja2 = "^3.1.4"
+langchain = "^0.2.16"
 
 [tool.poetry.group.api]
 optional = true
@@ -38,6 +39,8 @@ transformers = "^4.44.2"
 torch = "^2.4.0"
 sentence-transformers = "^3.0.1"
 bert-score = "^0.3.13"
+accelerate = "^0.34.0"
+bitsandbytes = "^0.43.3"
 
 [tool.poetry.group.frontend]
 optional = true
