--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 ipykernel = "^6.29.5"
 lxml = "^5.2.2"
 html2text = "^2024.2.26"
@@ -36,7 +36,7 @@ pyvi = "^0.1.1"
 beautifulsoup4 = "^4.12.3"
 qdrant-client = "^1.11.1"
 transformers = "^4.44.2"
-torch = "^2.4.0"
+torch = {version = "^2.4.0", extras = ["cuda"]}
 sentence-transformers = "^3.0.1"
 bert-score = "^0.3.13"
 accelerate = "^0.34.0"
