--- a/src/gui/Dockerfile
+++ b/src/gui/Dockerfile
@@ -1,5 +1,11 @@
 # Use an official Python runtime as a parent image
-FROM python:3.12-slim
+FROM python:3.10-slim
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y curl
+
+# Set environment variables
+ENV PYTHONPATH=/app
 
 # Set the working directory in the container
 WORKDIR /app
@@ -15,6 +21,7 @@ RUN poetry install --no-root --with frontend --without dev
 
 # Copy the frontend (Streamlit) code into the container
 COPY src/gui /app/gui
+COPY src/util /app/util
 
 # Expose the port Streamlit runs on
 EXPOSE 8501
